[gd_scene load_steps=3 format=3 uid="uid://6ttsdbbod87e"]

[ext_resource type="Texture2D" uid="uid://0dopx10f1odg" path="res://textures/ship_status/docked.tres" id="1_r7cww"]
[ext_resource type="Script" path="res://components/shiplist/ship_list_item.gd" id="1_wiwcx"]

[node name="ShipListItem" type="HBoxContainer"]
script = ExtResource("1_wiwcx")

[node name="ShipStatusIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_r7cww")
stretch_mode = 3

[node name="ShipNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "!SHIPNAME"
